--- a/Chapter1.ipynb
+++ b/Chapter1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Chapter1.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/shortcipher3/information_theory_mackay/blob/master/Chapter1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -180,16 +191,16 @@
       "metadata": {
         "id": "zFsnXtaSqEDe",
         "colab_type": "code",
+        "outputId": "a0b99221-dad9-4e65-c70c-5b3e5bb3036a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 208
-        },
-        "outputId": "a0b99221-dad9-4e65-c70c-5b3e5bb3036a"
+        }
       },
       "source": [
         "!wget https://imgs.xkcd.com/comics/datacenter_scale.png"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,17 +252,17 @@
       "metadata": {
         "id": "v9XnDpg0v_h8",
         "colab_type": "code",
+        "outputId": "c20e8ede-28c9-4f72-b3b9-1a08e7806edd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 512
-        },
-        "outputId": "c20e8ede-28c9-4f72-b3b9-1a08e7806edd"
+        }
       },
       "source": [
         "fig, ax = plt.subplots(figsize=(20, 10))\n",
         "ax.imshow(bw, cmap='gray', interpolation='nearest')"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -307,17 +318,17 @@
       "metadata": {
         "id": "KjNd5xPX5CTF",
         "colab_type": "code",
+        "outputId": "67ba4761-ec56-43f1-bb73-014776750721",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 512
-        },
-        "outputId": "67ba4761-ec56-43f1-bb73-014776750721"
+        }
       },
       "source": [
         "fig, ax = plt.subplots(figsize=(20, 10))\n",
         "ax.imshow(noisy_bw, cmap='gray', interpolation='nearest')"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,11 +371,11 @@
       "metadata": {
         "id": "zU5jv6hVX2s3",
         "colab_type": "code",
+        "outputId": "f2b212af-5e72-48d4-f011-b8fe7c25eb87",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "f2b212af-5e72-48d4-f011-b8fe7c25eb87"
+        }
       },
       "source": [
         "transmit_rep = repetition_encode(bw.reshape(-1), n=3)\n",
@@ -372,7 +383,7 @@
         "fig, ax = plt.subplots(figsize=(20, 30))\n",
         "ax.imshow(rep_bw, cmap='gray', interpolation='nearest')"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -405,11 +416,11 @@
       "metadata": {
         "id": "Q5FDdQlvaadl",
         "colab_type": "code",
+        "outputId": "ac8bd57f-eea7-4d7e-e253-d969b16e72ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "ac8bd57f-eea7-4d7e-e253-d969b16e72ae"
+        }
       },
       "source": [
         "received_rep = inject_noise(transmit_rep, noise_level=0.2)\n",
@@ -417,7 +428,7 @@
         "fig, ax = plt.subplots(figsize=(20, 30))\n",
         "ax.imshow(rep_bw, cmap='gray', interpolation='nearest')"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,11 +461,11 @@
       "metadata": {
         "id": "7W90o_5VaIBh",
         "colab_type": "code",
+        "outputId": "6baaafe0-2639-46a7-e20f-2f72f12935e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 512
-        },
-        "outputId": "6baaafe0-2639-46a7-e20f-2f72f12935e7"
+        }
       },
       "source": [
         "rep_decoded = repetition_decode(received_rep)\n",
@@ -462,7 +473,7 @@
         "fig, ax = plt.subplots(figsize=(20, 10))\n",
         "ax.imshow(rep_dec_bw, cmap='gray', interpolation='nearest')"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -505,11 +516,11 @@
       "metadata": {
         "id": "WzZwqIrVLjJx",
         "colab_type": "code",
+        "outputId": "b4497c19-5c51-480a-9583-7eeaf032dfd1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 845
-        },
-        "outputId": "b4497c19-5c51-480a-9583-7eeaf032dfd1"
+        }
       },
       "source": [
         "code = hamming_encode(bw)\n",
@@ -517,7 +528,7 @@
         "fig, ax = plt.subplots(figsize=(20, 17))\n",
         "ax.imshow(bw_code, cmap='gray', interpolation='nearest')"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -550,11 +561,11 @@
       "metadata": {
         "id": "Ws7CyY1iMNjX",
         "colab_type": "code",
+        "outputId": "c0bc8647-bdde-43a0-f042-df183a2c4e92",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 845
-        },
-        "outputId": "c0bc8647-bdde-43a0-f042-df183a2c4e92"
+        }
       },
       "source": [
         "noisy = inject_noise(code, noise_level=0.2)\n",
@@ -562,7 +573,7 @@
         "fig, ax = plt.subplots(figsize=(20, 17))\n",
         "ax.imshow(bw_noisy, cmap='gray', interpolation='nearest')"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,11 +606,11 @@
       "metadata": {
         "id": "Am_rFC4KNSPa",
         "colab_type": "code",
+        "outputId": "905eef16-7f98-43bd-d424-b4eea2446b99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 512
-        },
-        "outputId": "905eef16-7f98-43bd-d424-b4eea2446b99"
+        }
       },
       "source": [
         "received = hamming_decode(noisy)\n",
@@ -607,7 +618,7 @@
         "fig, ax = plt.subplots(figsize=(20, 10))\n",
         "ax.imshow(bw_received, cmap='gray', interpolation='nearest')"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -650,11 +661,11 @@
       "metadata": {
         "id": "LJ75WnbhO31E",
         "colab_type": "code",
+        "outputId": "e6fb79f0-88cd-42ea-8c12-ebd99b6a9c59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
-        },
-        "outputId": "e6fb79f0-88cd-42ea-8c12-ebd99b6a9c59"
+        }
       },
       "source": [
         "### Exercise 1.5\n",
@@ -663,7 +674,7 @@
         "print(hamming_decode(np.array([0, 1, 0, 0, 1, 1, 1])))\n",
         "print(hamming_decode(np.array([1, 1, 1, 1, 1, 1, 1])))"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
